# flux-notebooks

./: .gitignore  .jupytext.toml  Makefile  README.md  app.py  build_superdemo_real.py  pyproject.toml  rename_bids_anat_func.py  theme.py
assets/: custom.css  flux_inputs.css
book/: _config.yml  _toc.yml  intro.md
book/_build/.doctrees/: environment.pickle  intro.doctree
book/_build/html/: .buildinfo  genindex.html  intro.html  objects.inv  search.html  searchindex.js
book/binder/: requirements.txt
book_templates/: _config.yml.j2  _toc.yml.j2  index.md.j2
examples/: build_jupyter_book.py  copy_and_rewrite_mriqchtmls.sh  generate_single_dataset.sh  generate_super_dataset.py  generate_super_dataset_complete.py
pages/: bids.py  fmriprep_detail.py  fmriprep_index.py  freesurfer.py  home.py  mriqc.py  mriqc_detail.py  redcap.py  subject_detail.py
src/flux_notebooks/: cli.py  config.py  datalad_utils.py  qc_utils.py  summarize.py  superbuilder.py  theme.py
src/flux_notebooks.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/flux_notebooks/bids/: __init__.py  summarize_bids.py
src/flux_notebooks/cli/: report.py
src/flux_notebooks/freesurfer/: __init__.py  summarize_freesurfer.py
src/flux_notebooks/lib/: __init__.py  bids.py  bids_inventory.py  common.py  freesurfer.py  mriqc.py  mriqc_summary.py  overview.py
src/flux_notebooks/notebooks/: builder.py  sections.py
src/flux_notebooks/plugins/: base.py  registry.py
src/flux_notebooks/redcap/: __init__.py  (+4 more)
tests/: test_notebook_builder.py  test_summarize.py
(+11 files in other folders)
