[project]
name = "flux-notebooks"
version = "0.1.0"
description = "Generate reproducible notebooks from datasets managed in Git/Gitea/DataLad (BIDS-friendly)"
authors = [{ name = "Sean Spinney" }]
requires-python = ">=3.10"
dependencies = [
  "pybids>=0.16",
  "pydantic>=2",
  "jinja2>=3.1",
  "nbformat>=5.10",
  "pandas>=2.2",
  "typer>=0.12",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "datalad>=0.19",
  "jupyter-book>=1.0",
  "myst-nb>=1.0",
  "ipywidgets>=8.1",  
  "plotly>=5.22",
]

[project.scripts]
flux-notebooks = "flux_notebooks.cli:app"
flux-notebooks-super = "flux_notebooks.superbuilder:app"


[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
